--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Flask>=1.0.2
-torch>=1.11.0
-torchvision>=0.12.0
-numpy==1.24.1
-Pillow>=9.0.0
-gunicorn>=20.1.0
+Flask>=2.3.3
+torch>=2.1.0
+torchvision>=0.16.1
+numpy>=1.26.0
+Pillow>=10.1.0
+gunicorn>=21.2.0
 wget>=3.2
-aiofiles>=0.8.0
-aiohttp>=3.8.1
-uvicorn>=0.17.6
-nest_asyncio>=1.5.5
-requests>=2.25.1
-PyYAML>=5.4.1
-gdown
+aiofiles>=23.1.0
+aiohttp>=3.9.9
+uvicorn>=0.23.0
+nest_asyncio>=1.6.0
+requests>=2.31.0
+PyYAML>=6.0
+gdown>=4.7.1
